# platform-dbc

./: README.md  pyproject.toml  wust-sat.dbc
docs/: Transceiver TJA1145 - WUF.md
platform_canopen/: lora.eds  lora.xdc  lora_node.py  obc.eds  obc.xdc  obc_node.py  run_simulation.py  simulated_node.py
platform_dbc/: Transceiver TJA1145 - WUF.md  can_database.py  message_types.py  modules.py  wust-sat.dbc
platform_dbc/messages/: __init__.py  heartbeat.py
